ajout msg d'erreur

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
             <div id="maintenance"></div>
             <div class="muted">SAV</div>
             <div id="sav"></div>
-            <div class="muted">Blocage tél.</div>
+            <div class="muted">Bloc.télèch.</div>
             <div id="blocagetel"></div>
         </div>
     </div>
